--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "motw-bystanders",
   "version": "0.1.0",
+  "description" : "",
+  "main" : "app.js",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
