--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "motw-bystanders",
   "version": "0.1.0",
-  "description" : "",
-  "main" : "app.js",
+  "description": "",
+  "main": "app.js",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bulma": "^0.9.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "^4.5.4",
     "@vue/cli-service": "~4.5.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
