--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node app.js"
+    "start": "node app.js"
   },
   "author": "Sam McCall <smccall@smccall.com> (http://smccall.com)",
   "license": "ISC",
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
     "nodemon": "^2.0.4"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
